--- a/HPCQC.tex
+++ b/HPCQC.tex
@@ -1,1 +1,231 @@
+\documentclass{article}
 
+% Language setting
+% Replace `english' with e.g. `spanish' to change the document language
+\usepackage[english]{babel}
+
+% Set page size and margins
+% Replace `letterpaper' with `a4paper' for UK/EU standard size
+\usepackage[letterpaper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
+\usepackage{minted}
+% Useful packages
+\usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage[colorlinks=true, allcolors=blue]{hyperref}
+
+\title{Toward Unified Acceleration in Classical and Quantum Computation}
+\author{Fan Yang}
+
+\begin{document}
+\maketitle
+
+\begin{abstract}
+Numerical Method, Statistical Physics , Monte Carlo simulation, MD simulation, Muti-scalar problems, HPC speed up, using MPI;
+\end{abstract}
+
+\section{Introduction}
+
+Although quantum computing offers certain advantages over classical computing in specific scenarios, it is not yet well-suited for general-purpose computation. Therefore, a practical approach to leveraging quantum computing (QC) is to treat quantum processing units (QPUs) as specialized accelerators, utilized for particular computational tasks. The recent availability of programmable quantum computers over cloud has enabled a small scale experimental execution for some scientific computing tasks.This demenstrations point toward a future computing landscape whereby classical and quantum computing resources may be used in a hybrid heterogenous manner.
+
+This project aims to explore the full integration of quantum computing with classical HPC (High-Performance Computing). The scope includes leveraging the XACC framework to orchestrate heterogeneous workflows, integrating quantum hardware/simulators into classical computation pipelines, and conducting low-level benchmarking and compilation to optimize execution. The expected results will offer new perspectives for guiding future development strategies for quantum-classical integration. For background information, an introduction and overview of the development of quantum algorithms can be found in reference [2], while a detailed description of the VQLS algorithm is provided in reference [1].Additionally, for the parallel computing aspects, the XACC framework is discussed in reference [4], and a comprehensive description of hybrid HPCQC approaches can be found in reference [3][5][6].
+
+
+Once you're familiar with the editor, you can find various project settings in the Overleaf menu, accessed via the button in the very top left of the editor. To view tutorials, user guides, and further documentation, please visit our \href{https://www.overleaf.com/learn}{help library}, or head to our plans page to \href{https://www.overleaf.com/user/subscription/plans}{choose your plan}.
+
+\section{Some examples to get started}
+
+\subsection{How to create Sections and Subsections}
+
+Simply use the section and subsection commands, as in this example document! With Overleaf, all the formatting and numbering is handled automatically according to the template you've chosen. If you're using the Visual Editor, you can also create new section and subsections via the buttons in the editor toolbar.
+
+\subsection{How to include Figures}
+
+First you have to upload the image file from your computer using the upload link in the file-tree menu. Then use the includegraphics command to include it in your document. Use the figure environment and the caption command to add a number and a caption to your figure. See the code for Figure \ref{fig:XACC Framework} in this section for an example.
+
+Note that your figure will automatically be placed in the most appropriate place for it, given the surrounding text and taking into account other figures or tables that may be close by. You can find out more about adding images to your documents in this help article on \href{https://www.overleaf.com/learn/how-to/Including_images_on_Overleaf}{including images on Overleaf}.
+
+The oveall workflow starts with quantum kernel programming at the front-end, followed by IR generation and processing,and ends with back-end execution. Each of these layers exposes a variety of critical extension points.
+
+\begin{figure}
+\centering
+\includegraphics[width=0.75\linewidth]{XACC Framework.png}
+\caption{\label{fig:frog}XACC is composed of three high-level layers: the front-end, middle-end, and back-end. Source:https://arxiv.org/pdf/1911.02452}
+\end{figure}
+
+\subsection{How to add Tables}
+
+Use the table and tabular environments for basic tables --- see Table~\ref{tab:widgets}, for example. For more information, please see this help article on \href{https://www.overleaf.com/learn/latex/tables}{tables}.
+
+\begin{table}
+\centering
+\begin{tabular}{l|r}
+Item & Quantity \\\hline
+Widgets & 42 \\
+Gadgets & 13
+\end{tabular}
+\caption{\label{tab:widgets}An example table.}
+\end{table}
+
+\subsection{C++ Code Example}
+
+Below is a C++ kernel code snippet
+\begin{minted}[linenos, frame=lines, fontsize=\small]{cpp}
+// Annotated
+// AcceleratorBuffer first
+// parametres after
+
+__qpu__ kerkel(AcceleratorBuffer q, double x){
+    X(q[0]);
+    Ry(q[1], x);
+    Measure(q[0]);
+}
+\end{minted}
+
+
+
+Example of allocating a three qubit AcceleratorBuffer and executing a compiled circuit which persists results and metadata to the buffer.
+\begin{minted}[linenos, frame=lines, fontsize=\small]{cpp}
+//User allocates buffer in classical computer
+// keeps reference to it througthout execution
+auto buffer = xacc::qalloc{3};
+//Execute some circuit/ composite instruction
+
+// This writes result data to the buffer
+accelerator->execute(buffer, circuit);
+
+// User still has that buffer, get results
+auto results = buffer->getMeasurementCounts();
+
+//can get/add metadata, measurements and expection values
+std::vector<double> fidelities = buffer->getInformation
+("1q-gate-fidelities").as<std::vector<double>>();
+
+auto counts = buffer->getMeasurementCounts();
+auto expVal = buffer->getExpectationValueZ();
+
+
+
+__qpu__ QFT(AcceleratorBuffer q, int n){
+    for(int i= 0; i < n; i++){
+        H(q[i]);
+        for(int j = i + 1; j < n ; j ++){
+         double angle = M_PI /( 1 << (j -i));  //shift the binary 1 to the left by k bits = 2^k
+         CRz (q[j],q[i], angle);
+        }
+    }
+    // reverse the qubit order
+    //  for (int i = 0; i < n / 2; i++){
+    //  Swap[q[i],q[n-i-1]]
+    }
+}
+__qpu__ QFTdagger(AcceleratorBuffer q, int n){
+    // undo swaps
+    for (int i = 0; i < n / 2; i++) {
+        Swap(q[i], q[n - i - 1]);
+    }
+
+    // Undo QFT operations in reverse
+    for (int i = n - 1; i >= 0; i--) {
+
+        // Undo controlled rotations
+        for (int j = i + 1; j < n; j++) {
+            double angle = -M_PI / (1 << (j - i));
+            CRz(q[j], q[i], angle);
+        }
+
+        // Undo Hadamard
+        H(q[i]);
+    }
+}
+
+
+\end{minted}
+
+plugin export
+\begin{minted}[linenos, frame=lines, fontsize=\small]{cpp}
+//User allocates buffer in classical computer
+// keeps reference to it througthout execution
+auto buffer = xacc::qalloc{3};
+//Execute some circuit/ composite instruction
+
+// This writes result data to the buffer
+accelerator->execute(buffer, circuit);
+
+// User still has that buffer, get results
+auto results = buffer->getMeasurementCounts();
+
+//can get/add metadata, measurements and expection values
+std::vector<double> fidelities = buffer->getInformation
+("1q-gate-fidelities").as<std::vector<double>>();
+
+auto counts = buffer->getMeasurementCounts();
+auto expVal = buffer->getExpectationValueZ();
+
+
+
+__qpu__ kerkel(AcceleratorBuffer q, double x){
+    X(q[0]);
+    Ry(q[1], x);
+    Measure(q[0]);
+}
+\end{minted}
+
+Use the table and tabular environments for basic tables --- see Table~\ref{tab:widgets}, for example. For more information, please see this help article on \href{https://www.overleaf.com/learn/latex/tables}{tables}
+
+
+\subsection{How to add Comments and Track Changes}
+
+Comments can be added to your project by highlighting some text and clicking ``Add comment'' in the top right of the editor pane. To view existing comments, click on the Review menu in the toolbar above. To reply to a comment, click on the Reply button in the lower right corner of the comment. You can close the Review pane by clicking its name on the toolbar when you're done reviewing for the time being.
+
+Track changes are available on all our \href{https://www.overleaf.com/user/subscription/plans}{premium plans}, and can be toggled on or off using the option at the top of the Review pane. Track changes allow you to keep track of every change made to the document, along with the person making the change.
+
+\subsection{How to add Lists}
+
+You can make lists with automatic numbering \dots
+
+\begin{enumerate}
+\item Like this,
+\item and like this.
+\end{enumerate}
+\dots or bullet points \dots
+\begin{itemize}
+\item Like this,
+\item and like this.
+\end{itemize}
+
+\subsection{How to write Mathematics}
+
+\LaTeX{} is great at typesetting mathematics. Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
+\[S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
+      = \frac{1}{n}\sum_{i}^{n} X_i\]
+denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+
+
+\subsection{How to change the margins and paper size}
+
+Usually the template you're using will have the page margins and paper size set correctly for that use-case. For example, if you're using a journal article template provided by the journal publisher, that template will be formatted according to their requirements. In these cases, it's best not to alter the margins directly.
+
+If however you're using a more general template, such as this one, and would like to alter the margins, a common way to do so is via the geometry package. You can find the geometry package loaded in the preamble at the top of this example file, and if you'd like to learn more about how to adjust the settings, please visit this help article on \href{https://www.overleaf.com/learn/latex/page_size_and_margins}{page size and margins}.
+
+\subsection{How to change the document language and spell check settings}
+
+Overleaf supports many different languages, including multiple different languages within one document.
+
+To configure the document language, simply edit the option provided to the babel package in the preamble at the top of this example project. To learn more about the different options, please visit this help article on \href{https://www.overleaf.com/learn/latex/International_language_support}{international language support}.
+
+To change the spell check language, simply open the Overleaf menu at the top left of the editor window, scroll down to the spell check setting, and adjust accordingly.
+
+\subsection{How to add Citations and a References List}
+
+You can simply upload a \verb|.bib| file containing your BibTeX entries, created with a tool such as JabRef. You can then cite entries from it, like this: \cite{greenwade93}. Just remember to specify a bibliography style, as well as the filename of the \verb|.bib|. You can find a \href{https://www.overleaf.com/help/97-how-to-include-a-bibliography-using-bibtex}{video tutorial here} to learn more about BibTeX.
+
+If you have an \href{https://www.overleaf.com/user/subscription/plans}{upgraded account}, you can also import your Mendeley or Zotero library directly as a \verb|.bib| file, via the upload menu in the file-tree.
+
+\subsection{Good luck!}
+
+We hope you find Overleaf useful, and do take a look at our \href{https://www.overleaf.com/learn}{help library} for more tutorials and user guides! Please also let us know if you have any feedback using the \textbf{Contact us} link at the bottom of the Overleaf menu --- or use the contact form at \url{https://www.overleaf.com/contact}.
+
+\bibliographystyle{alpha}
+\bibliography{sample}
+
+\end{document}
